# agentRAG

./: .env.example  .gitignore  CORE_READINESS.md  LICENSE  MCP_INSPECTOR_TEST_SCENARIOS.md  MCP_QUICK_REF.md  MCP_SERVER_README.md  MCP_TESTING.md  PRD.md  PROJECT_REVIEW.md  README.md  REVIEW_SUMMARY.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_mcp_inspector.sh
agentrag/: __init__.py  cli.py  config.py  ingest.py  mcp_server.py  models.py  pipeline.py  planner.py  qdrant_store.py  reranker.py  retrieval.py  summarizer.py  watch.py
agentrag/chunkers/: code.py  text.py
agentrag/providers/: embeddings.py
docs/: CORE_READINESS.md  GITIGNORE_IMPLEMENTATION.md  MCP_INSPECTOR_GUIDE.md  MCP_SERVER_README.md  MCP_SERVER_TESTING_SUMMARY.md  PRD.md  QUICKSTART.md  README.md  TEST_REPORT.md  VECTOR_DIMENSIONS.md
scripts/: install_windows.ps1  run_all_tests.sh  test_local_models.py  test_mcp_integration.py  test_scenarios.py
test_data/: README.md  example.go  example.java  example.js  example.py
tests/: test_batch_processing.py  test_chunkers.py  test_cli.py  test_code_graph.py  test_embeddings.py  test_env_status.py  test_gitignore.py  test_ingest.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_planner.py  test_reranker.py
