[project]
name = "agentrag"
version = "0.1.0"
description = "agentRAG brain memory for docs + code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "qdrant-client>=1.9.0",
  "typer>=0.12.3",
  "python-dotenv>=1.0.1",
  "tree-sitter>=0.21.3",
  "tree-sitter-languages>=1.10.2",
  "mcp>=1.0.0",
  "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
agentrag = "agentrag.cli:app"
agentrag-mcp = "agentrag.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentrag", "agentrag.chunkers", "agentrag.providers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
